fix whitespace issue for previous page text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -474,6 +474,7 @@ body {
   color: var(--clr-accent-500);
 
   text-transform: capitalize;
+  white-space: pre;
 }
 
 .guide-link:hover {
